--- a/index/index.html
+++ b/index/index.html
@@ -26,27 +26,27 @@
       </section>
       <section class="image-grid">
         <figure>
-          <a href="https://www.instagram.com/p/Cf8-1k7rqCl/"><img src="/../photos/1.jpeg" alt="Image 1"></a>
+          <a href="https://www.instagram.com/p/Cf8-1k7rqCl/"><img src="/../photos/1.jpeg" alt="Image of Portland Downtown"></a>
           <figcaption>Portland Downtown</figcaption>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/p/CLY7pqNp1r5/"><img src="/../photos/2.jpeg" alt="Image 2"></a>
+          <a href="https://www.instagram.com/p/CLY7pqNp1r5/"><img src="/../photos/2.jpeg" alt="Image of West End"></a>
           <figcaption>West End</figcaption>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/p/CG2WOVTJskC/"><img src="/../photos/15.jpeg" alt="Image 3"></a>
+          <a href="https://www.instagram.com/p/CG2WOVTJskC/"><img src="/../photos/15.jpeg" alt="Image of Portland Head Light"></a>
           <figcaption>Portland Head Light</figcaption>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/p/CAbV6j9puSG/"><img src="/../photos/3.jpeg" alt="Image 4"></a>
+          <a href="https://www.instagram.com/p/CAbV6j9puSG/"><img src="/../photos/3.jpeg" alt="Image of Rams Island"></a>
           <figcaption>Rams Island</figcaption>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/p/B3ICrT2Jeqt/"><img src="/../photos/12.jpeg" alt="Image 5"></a>
+          <a href="https://www.instagram.com/p/B3ICrT2Jeqt/"><img src="/../photos/12.jpeg" alt="Image of Fort Williams Park"></a>
           <figcaption>Fort Williams Park</figcaption>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/p/CBtKGTiJiPq/"><img src="/../photos/13.jpeg" alt="Image 6"></a>
+          <a href="https://www.instagram.com/p/CBtKGTiJiPq/"><img src="/../photos/13.jpeg" alt="Image of Portland Harbor"></a>
           <figcaption>Portland Harbor</figcaption>
         </figure>
       </section>
