--- a/video/video.html
+++ b/video/video.html
@@ -39,6 +39,12 @@
             Your browser does not support the video tag.
           </video>
         </div>
+        <div class="video-container">
+          <video controls autoplay loop muted>
+            <source src="/video/reign.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
       </section>
     </main>
     <footer class="site-footer">
