--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <link rel="stylesheet" href="/../test/test.css">
+  <link rel="stylesheet" href="contact.css">
 </head>
 <body>
   <div class="site-wrapper">
@@ -31,7 +31,7 @@
           </div>
           <div class="form-group">
             <label for="message">Message:</label>
-            <textarea id="message" name="message" class="message-box" required></textarea>
+            <textarea id="message" name="message" required></textarea>
           </div>
           <div class="form-group">
             <input type="submit" value="Submit">
@@ -40,6 +40,8 @@
         <div class="button-group">
           <a href="mailto:contactchurchmarquis@gmail.com" class="email-button">Email</a>
           <a href="https://instagram.com/churchmarquis" class="instagram-button">Instagram</a>
+          <a href="http://tinyurl.com/28bruhjx" class="youtube-button">YouTube</a>
+          <a href="https://soundcloud.com/churchmarquis" class="soundcloud-button">SoundCloud</a>
         </div>
       </section>
     </main>
@@ -47,5 +49,20 @@
       <p>&copy;2024 Church Marquis Media.</p>
     </footer>
   </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const form = document.querySelector('form');
+      form.addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent the default form submission
+        
+        const formData = new FormData(form);
+        for (let [key, value] of formData.entries()) {
+          console.log(`${key}: ${value}`);
+        }
+        
+        alert('Form submitted! Check the console for details.');
+      });
+    });
+  </script>
 </body>
 </html>
